--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=ubBackend
 
 #data base configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/ub-project?serverTimezone=UTC
-spring.datasource.username=divar
-spring.datasource.password=12345*#54321var
+spring.datasource.username=${dbuser}
+spring.datasource.password=${dbpassword}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.port=8080
