Mathods: cancel accessCode, deleteSudetnFromCourse addGradesTostudent, recursion of grades in student

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,11 @@ spring.security.user.password=${SPRING_PASSWORD}
 logging.level.org.springframework.web=DEBUG
 # logging.level.org.springframework.boot.autoconfigure=DEBUG
 
+# optimization DB
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.initialization-fail-timeout=0
+
 #path
 server.servlet.context-path=/system/api
 
