methods: CRUD of user and endpints check

--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,11 @@ java {
 repositories {
     mavenCentral()
 }
+// jdbc:postgresql://db.yylktgukfamnappzirae.supabase.co:5432/postgres
+// posstgres - g7jiY5viFZ0YH1oA
 
+// jdbc:mysql://localhost:3306/ub-project?serverTimezone=UTC
+// divar
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -25,6 +29,7 @@ dependencies {
     runtimeOnly 'com.mysql:mysql-connector-j'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    // runtimeOnly 'org.postgresql:postgresql'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
     // jwt dependencies
