configuration swagger/openApi

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 server.port=8080
 
@@ -24,6 +24,9 @@ spring.datasource.hikari.initialization-fail-timeout=0
 
 #path
 server.servlet.context-path=/system/api
+
+# spring doc
+# springdoc.swagger-ui.path=/ub
 
 # no persist sessions
 server.servlet.session.persistent=false
