add new variables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,7 +32,7 @@ server.servlet.context-path=/system/api
 server.servlet.session.persistent=false
 
 #ApiKey JWT
-# jwt.secret.key=${JWT}
+jwt.secret.key=${JWT}
 
 #Expiration time of token in milliseconds
-# jwt.time.expiration=${TIME_JWT}
+jwt.time.expiration=${TIME_JWT}
