--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 server.port=8080
 
@@ -16,6 +16,8 @@ spring.security.user.password=${SPRING_PASSWORD}
 # debug
 logging.level.org.springframework.web=DEBUG
 # logging.level.org.springframework.boot.autoconfigure=DEBUG
+
+logging.level.org.springframework.security=DEBUG
 
 # optimization DB
 spring.datasource.hikari.connection-timeout=30000
