--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,3 +38,11 @@ jwt.secret.key=${JWT}
 
 #Expiration time of token in milliseconds
 jwt.time.expiration=${TIME_JWT}
+
+# mail configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${USER_MAIL}
+spring.mail.password=${PASSWORD_MAIL}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
