--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,8 @@ spring.datasource.hikari.initialization-fail-timeout=0
 
 #path
 server.servlet.context-path=/system/api
+# logs
+logging.level.root=INFO
 
 # spring doc
 # springdoc.swagger-ui.path=/ub
