--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,13 +5,13 @@ spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 server.port=8080
 
 # credentials
-spring.security.user.name=${SPRING_USER}
-spring.security.user.password=${SPRING_PASSWORD}
+# spring.security.user.name=${SPRING_USER}
+# spring.security.user.password=${SPRING_PASSWORD}
 
 # debug
 logging.level.org.springframework.web=DEBUG
