--- a/build.gradle
+++ b/build.gradle
@@ -24,10 +24,12 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     // runtimeOnly 'com.mysql:mysql-connector-j'
     implementation 'org.postgresql:postgresql:42.6.0'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
     testImplementation 'org.springframework.security:spring-security-test'
     runtimeOnly 'org.postgresql:postgresql'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    // junit test
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     // jwt dependencies
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
