--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,6 +41,8 @@ jwt.secret.key=${JWT}
 #Expiration time of token in milliseconds
 jwt.time.expiration=${TIME_JWT}
 
+spring.datasource.hikari.data-source-properties.prepareThreshold=0
+
 # mail configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
