update context path

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.hikari.initialization-fail-timeout=0
 
 #path
-server.servlet.context-path=/system/api
+server.servlet.context-path=/api
 # logs
 logging.level.root=INFO
 
